Dark mode UI FIX

--- a/sigipo/static/css/internal/base-crud.css
+++ b/sigipo/static/css/internal/base-crud.css
@@ -22,7 +22,7 @@
 }
 .table-wrapper {
   min-width: 1000px;
-  background: #fff;
+  background: var(--bs-card-cap-bg);
   padding: 20px;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
 }
@@ -34,16 +34,7 @@
   margin: 8px 0 0;
   font-size: 22px;
 }
-table.table tr th,
-table.table tr td {
-  border-color: #e9e9e9;
-}
-table.table-striped tbody tr:nth-of-type(odd) {
-  background-color: #fcfcfc;
-}
-table.table-striped.table-hover tbody tr:hover {
-  background: #f5f5f5;
-}
+
 table.table th i {
   font-size: 13px;
   margin: 0 5px;
